SkeletonConverter: Consider case of ROI perimeter edging structure...
... reported at https://forum.image.sc/t/early-preview-of-sntv5-ready-for-testing/116768/4